<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/registerFullNameID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/registerPhoneID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/black">

            <EditText
                android:id="@+id/registerEmailID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/registerPasswordID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="3dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/registerConfirmPasswordID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/registerAlreadyAccountTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/already_registered"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/registerCancelID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="5"
                android:background="@drawable/button_bg"
                android:text="@string/cancel"
                android:textSize="18sp" />

            <Button
                android:id="@+id/registerSignupID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="5"
                android:background="@drawable/button_bg"
                android:text="@string/signup_hint"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>