<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_weight="0.5"
                android:src="@drawable/email" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:padding="3dp"
                android:textAlignment="textStart"
                android:textColor="@color/black">

                <EditText
                    android:id="@+id/loginEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_weight="0.5"
                android:src="@drawable/password" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.5"
                android:padding="3dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/loginPasswordID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edittext_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    tools:ignore="RtlCompat,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginActivityLoginButtonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginActivityRegisterTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginActivityResetPasswordID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="forget password?"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>